fix: header overflow

--- a/_assets/css/index.scss
+++ b/_assets/css/index.scss
@@ -11,7 +11,7 @@ $theme-color-primary-family: "blue";
 $theme-color-primary-lightest: false;
 $theme-color-primary-lighter: "blue-10";
 $theme-color-primary-light: "blue-30";
-$theme-color-primary:  "indigo-cool-70v";
+$theme-color-primary:  "indigo-cool-70v"; //"blue-60";
 $theme-color-primary-vivid: "blue-warm-60v";
 $theme-color-primary-dark: "blue-warm-70v";
 $theme-color-primary-darker: $theme-color-primary; //"blue-warm-80v";
@@ -51,6 +51,7 @@ body {
     margin:0;
     height:auto;
     line-height:0;
+    overflow: hidden;
 
     img {
       max-height:65px;
